design: added style for category tip

--- a/assets/styles/frontend/common/main-base.less
+++ b/assets/styles/frontend/common/main-base.less
@@ -46,6 +46,7 @@
 
 //// in
 @import "components/in/availability.less";
+@import "components/in/product-prices.less";
 @import "components/in/overlay.less";
 @import "components/in/message.less";
 @import "components/in/free-transport.less";
