--- a/assets/styles/frontend/common/main-category.less
+++ b/assets/styles/frontend/common/main-category.less
@@ -22,6 +22,7 @@
 @import "components/list/tags.less";
 
 //// box
+@import "components/box/category-tip.less";
 @import "components/box/list.less";
 @import "components/box/filter.less";
 @import "components/box/price-slider.less";
