--- a/templates/Front/Content/Product/productSetViewMacro.html.twig
+++ b/templates/Front/Content/Product/productSetViewMacro.html.twig
@@ -27,7 +27,7 @@
                                             </div>
                                         {% endif %}
                                         <div class="list-products-set__item__image">
-                                            {{ image(setItem.image, {size: 'listSet', alt: setItem.name, lazy: true}) }}
+                                            {{ image(setItem.image, {size: 'bigThumbnail', alt: setItem.name, lazy: true}) }}
                                         </div>
                                         <div class="list-products-set__item__info">
                                             {{ setItem.name }}
