--- a/templates/Front/Content/Category/categoryTip.html.twig
+++ b/templates/Front/Content/Category/categoryTip.html.twig
@@ -6,13 +6,28 @@
         {% import 'Front/Content/Product/boxDetail.html.twig' as boxDetail %}
         {% set tipProduct = category.tipProduct(domainId) %}
 
-        {% if tipProduct is not null %}
-            {{ image(tipProduct) }}
-            <a href="{{ url('front_product_detail', {'id': tipProduct.id}) }}">{{ tipProduct.name }}</a>
-            {{ boxDetail.productPrice(tipProduct, 'tipProduct') }}
-        {% endif %}
+        <div class="box-category-tip">
+            <h3 class="box-category-tip__title">{{ category.tipName(domainId) }}</h3>
+            <p class="box-category-tip__subtitle">{{ category.tipText(domainId) }}</p>
+            
+            <div class="box-category-tip__content">
+                {% if tipProduct is not null %}
+                    <div class="box-category-tip__content__product">
+                        <div class="box-category-tip__content__product__in">
+                            <div class="box-category-tip__content__product__image">
+                                {{ image(tipProduct, { size: 'bigThumbnail' }) }}
+                            </div>
+                            <a class="box-category-tip__content__product__name" href="{{ url('front_product_detail', {'id': tipProduct.id}) }}">
+                                {{ tipProduct.name }}
+                            </a>
+                        </div>
+                    </div>
 
-        {{ category.tipName(domainId) }}
-        {{ category.tipText(domainId) }}
+                    <div class="box-category-tip__content__info">
+                        {{ boxDetail.productPrice(tipProduct, 'tipProduct') }}
+                    </div>
+                {% endif %}
+            </div>
+        </div>
     {% endif %}
 {% endmacro %}
