design: added variable for expand of font-size for font-family alt

--- a/assets/styles/frontend/common/components/box/chooser.less
+++ b/assets/styles/frontend/common/components/box/chooser.less
@@ -133,7 +133,7 @@
             @media @query-lg {
                 width: @box-chooser-price-width;
 
-                font-size: @font-size + 1px;
+                font-size: @font-size + @font-size-alt-expand;
             }
 
             .box-chooser__item--active & {
@@ -165,7 +165,7 @@
             margin: 0 10px 0 0;
 
             text-decoration: underline;
-            font-size: @font-size-extra-small + 1px;
+            font-size: @font-size-extra-small + @font-size-alt-expand;
             font-family: @font-alt;
 
             &__show {
