--- a/assets/styles/frontend/common/components/box/contact.less
+++ b/assets/styles/frontend/common/components/box/contact.less
@@ -71,7 +71,7 @@
 
                 text-transform: uppercase;
                 font-weight: 700;
-                font-size: 16px + 1px;
+                font-size: 16px + @font-size-alt-expand;
                 font-family: @font-alt;
             }
         }
@@ -84,7 +84,7 @@
             margin-bottom: 7px;
 
             color: @color-base;
-            font-size: 20px + 1px;
+            font-size: 20px + @font-size-alt-expand;
             font-family: @font-alt;
             text-decoration: none;
 
@@ -133,7 +133,7 @@
         &__text {
             line-height: 24px;
 
-            font-size: @font-size-small + 1px;
+            font-size: @font-size-small + @font-size-alt-expand;
             font-family: @font-alt;
             color: @color-base;
         }
@@ -213,7 +213,7 @@
                 line-height: 24px;
                 margin-bottom: 8px;
 
-                font-size: 16px + 1px;
+                font-size: 16px + @font-size-alt-expand;
                 font-family: @font-alt;
                 color: @color-0;
 
@@ -238,7 +238,7 @@
                 width: 100%;
                 line-height: 24px;
 
-                font-size: @font-size-small + 1px;
+                font-size: @font-size-small + @font-size-alt-expand;
                 font-family: @font-alt;
 
                 @media @query-md {
@@ -290,7 +290,7 @@
             &__text-big {
                 margin: 0;
 
-                font-size: 16px + 1px;
+                font-size: 16px + @font-size-alt-expand;
             }
         }
     }
