--- a/assets/styles/frontend/common/components/box/filter.less
+++ b/assets/styles/frontend/common/components/box/filter.less
@@ -125,7 +125,7 @@
 
                 cursor: pointer;
                 text-decoration: underline;
-                font-size: @font-size-extra-small + 1px;
+                font-size: @font-size-extra-small + @font-size-alt-expand;
                 font-family: @font-alt;
             }
         }
