--- a/assets/styles/frontend/common/components/box/info-row.less
+++ b/assets/styles/frontend/common/components/box/info-row.less
@@ -1,6 +1,6 @@
 @box-info-row-bg: #e5e9ec;
 @box-info-row-title-bg: #cdd5da;
-@box-info-row-font-size: @font-size-extra-small + 1px;
+@box-info-row-font-size: @font-size-extra-small + @font-size-alt-expand;
 @box-info-row-bottom-gap: 25px;
 @box-info-row-min-height: 34px;
 @box-info-row-padding: 20px;
