--- a/assets/styles/frontend/common/components/box/list.less
+++ b/assets/styles/frontend/common/components/box/list.less
@@ -171,7 +171,7 @@
                 line-height: @box-list-description-line-height;
 
                 font-family: @font-alt;
-                font-size: @box-list-description-font-size + 1px;
+                font-size: @box-list-description-font-size + @font-size-alt-expand;
             }
         }
 
