--- a/assets/styles/frontend/common/components/box/order.less
+++ b/assets/styles/frontend/common/components/box/order.less
@@ -189,7 +189,7 @@
 
             border-radius: @radius;
             background-color: @color-yellow;
-            font-size: @font-size-extra-small + 1px;
+            font-size: @font-size-extra-small + @font-size-alt-expand;
             font-family: @font-alt;
             text-decoration: none;
             transition: @transition;
