--- a/assets/styles/frontend/common/components/box/preview.less
+++ b/assets/styles/frontend/common/components/box/preview.less
@@ -130,7 +130,7 @@
         margin-bottom: 20px;
 
         color: @color-base;
-        font-size: @font-size-small + 1px;
+        font-size: @font-size-small + @font-size-alt-expand;
         font-family: @font-alt;
     }
 }
