--- a/assets/styles/frontend/common/components/box/promo-image.less
+++ b/assets/styles/frontend/common/components/box/promo-image.less
@@ -53,7 +53,7 @@
             line-height: 30px;
 
             font-family: @font-alt;
-            font-size: @font-size-big + 1px;
+            font-size: @font-size-big + @font-size-alt-expand;
 
             br {
                 display: none;
