--- a/assets/styles/frontend/common/components/in/discount-message.less
+++ b/assets/styles/frontend/common/components/in/discount-message.less
@@ -13,7 +13,7 @@
     background-color: @color-f;
     font-family: @font-alt;
     font-weight: 600;
-    font-size: @font-size + 1px;
+    font-size: @font-size + @font-size-alt-expand;
 
     @media @query-lg {
         padding: 10px 40px;
@@ -34,7 +34,7 @@
         padding: 9px 10px;
 
         background-color: @color-box;
-        font-size: @font-size-extra-small + 1px;
+        font-size: @font-size-extra-small + @font-size-alt-expand;
 
         @media @query-md {
             margin: 10px 0 auto 10px;
