--- a/assets/styles/frontend/common/components/in/message.less
+++ b/assets/styles/frontend/common/components/in/message.less
@@ -23,7 +23,7 @@
     background-color: @color-f;
     font-family: @font-alt;
     font-weight: 600;
-    font-size: @font-size-mobile + 1px;
+    font-size: @font-size-mobile + @font-size-alt-expand;
 
     li {
         color: @in-message-alert-text;
