--- a/assets/styles/frontend/common/components/in/product-prices.less
+++ b/assets/styles/frontend/common/components/in/product-prices.less
@@ -46,7 +46,7 @@
             line-height: 18px;
 
             font-family: @font-alt;
-            font-size: 10px + 1px;
+            font-size: 10px + @font-size-alt-expand;
             font-weight: 700;
             text-transform: uppercase;
             color: @color-f;
@@ -59,7 +59,7 @@
             line-height: 18px;
             margin-bottom: 0;
 
-            font-size: @font-size-extra-small + 1px;
+            font-size: @font-size-extra-small + @font-size-alt-expand;
             font-family: @font-alt;
         }
     }
