--- a/assets/styles/frontend/common/components/list/articles-blog.less
+++ b/assets/styles/frontend/common/components/list/articles-blog.less
@@ -65,7 +65,7 @@
                 line-height: 34px;
 
                 color: @color-base;
-                font-size: 30px + 1px;
+                font-size: 30px + @font-size-alt-expand;
                 font-weight: 700;
                 font-family: @font-alt;
                 text-decoration: underline;
@@ -76,11 +76,11 @@
                 margin-bottom: 10px;
 
                 font-family: @font-alt;
-                font-size: 16px + 1px;
+                font-size: 16px + @font-size-alt-expand;
             }
 
             &__date {
-                font-size: 12px + 1px;
+                font-size: 12px + @font-size-alt-expand;
                 font-weight: 700;
                 font-family: @font-alt;
             }
