--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -102,7 +102,7 @@
                 &__code {
                     font-weight: 500;
                     font-family: @font-alt;
-                    font-size: @font-size-extra-small + 1px;
+                    font-size: @font-size-extra-small + @font-size-alt-expand;
                     opacity: 0.5;
                 }
                 
@@ -206,7 +206,7 @@
                     line-height: 18px;
                     margin-bottom: 0;
 
-                    font-size: @font-size-extra-small + 1px;
+                    font-size: @font-size-extra-small + @font-size-alt-expand;
                     font-family: @font-alt;
                     font-weight: 400;
                 }
