--- a/assets/styles/frontend/common/components/table/cart-preview.less
+++ b/assets/styles/frontend/common/components/table/cart-preview.less
@@ -61,7 +61,7 @@
             background-color: @color-price-discount;
             text-transform: uppercase;
             font-family: @font-alt;
-            font-size: 11px + 1px;
+            font-size: 11px + @font-size-alt-expand;
             color: @color-f;
             border-radius: @radius-very-small;
 
