--- a/assets/styles/frontend/common/core/variables.less
+++ b/assets/styles/frontend/common/core/variables.less
@@ -178,6 +178,9 @@
 @font-size: 15px;
 @font-size-big: 18px;
 @font-size-mobile: 13px;
+// This variable is using for font-family alt. This expansion is necessary because we have a different font for family alt as we have in the design.
+// The new font looks smaller and this 1px fix helps him to looks bigger like a font in the design.
+@font-size-alt-expand: 1px;
 
 // Layout
 @web-width: 1320px;
