--- a/assets/styles/frontend/common/layout/footer.less
+++ b/assets/styles/frontend/common/layout/footer.less
@@ -510,7 +510,7 @@
         line-height: 18px;
         margin-bottom: 8px;
 
-        font-size: 12px + 1px;
+        font-size: 12px + @font-size-alt-expand;
         font-family: @font-alt;
 
         @media @query-lg {
@@ -525,7 +525,7 @@
         line-height: 18px;
         margin-bottom: 31px;
 
-        font-size: 11px + 1px;
+        font-size: 11px + @font-size-alt-expand;
         font-family: @font-alt;
 
         @media @query-lg {
@@ -534,7 +534,7 @@
     }
 
     &__shopsys {
-        font-size: 12px + 1px;
+        font-size: 12px + @font-size-alt-expand;
         font-family: @font-alt;
 
         &__image {
