--- a/assets/styles/frontend/common/layout/header/cart.less
+++ b/assets/styles/frontend/common/layout/header/cart.less
@@ -65,7 +65,7 @@
             position: absolute;
             display: block;
             height: @cart-number-size;
-            line-height: @cart-number-size + 1px;
+            line-height: @cart-number-size + @font-size-alt-expand;
             min-width: @cart-number-size;
             padding: 0 4px;
             top: -6px;
