--- a/assets/styles/frontend/common/components/box/detail-add.less
+++ b/assets/styles/frontend/common/components/box/detail-add.less
@@ -128,7 +128,7 @@
         flex-direction: row;
         align-items: center;
 
-        font-size: @font-size + 1px;
+        font-size: @font-size + @font-size-alt-expand;
         font-family: @font-alt;
 
         &--variant {
@@ -136,7 +136,7 @@
             justify-content: flex-end;
             padding-left: 10px;
 
-            font-size: @font-size-extra-small + 1px;
+            font-size: @font-size-extra-small + @font-size-alt-expand;
         }
 
         &__image {
