--- a/assets/styles/frontend/common/components/in/tab.less
+++ b/assets/styles/frontend/common/components/in/tab.less
@@ -189,7 +189,7 @@
                 margin: 0 0 40px;
 
                 font-family: @font-alt;
-                font-size: 24px + 1px;
+                font-size: 24px + @font-size-alt-expand;
             }
         }
     }
