--- a/assets/styles/frontend/common/components/in/user-text.less
+++ b/assets/styles/frontend/common/components/in/user-text.less
@@ -13,7 +13,7 @@
     line-height: @in-user-text-font-size + 16px;
 
     font-family: @font-alt;
-    font-size: @in-user-text-font-size + 1px;
+    font-size: @in-user-text-font-size + @font-size-alt-expand;
 
     a {
         text-decoration: underline;
@@ -67,7 +67,7 @@
 
         color: @color-base;
         font-family: @font-alt;
-        font-size: @in-user-text-title-font-size + 1px;
+        font-size: @in-user-text-title-font-size + @font-size-alt-expand;
         font-weight: 700;
 
         &--center {
