--- a/assets/styles/frontend/common/components/list/articles.less
+++ b/assets/styles/frontend/common/components/list/articles.less
@@ -151,7 +151,7 @@
                 margin-bottom: 10px;
 
                 color: @color-base;
-                font-size: 16px + 1px;
+                font-size: 16px + @font-size-alt-expand;
                 font-family: @font-alt;
 
                 .list-articles--white & {
@@ -162,7 +162,7 @@
             }
 
             &__date {
-                font-size: 12px + 1px;
+                font-size: 12px + @font-size-alt-expand;
                 font-weight: 700;
                 font-family: @font-alt;
 
