--- a/assets/styles/frontend/common/components/list/menu.less
+++ b/assets/styles/frontend/common/components/list/menu.less
@@ -316,7 +316,7 @@
                         line-height: 21px;
 
                         font-weight: 400;
-                        font-size: @font-size-small + 1px;
+                        font-size: @font-size-small + @font-size-alt-expand;
                         font-family: @font-alt;
                     }
                 }
@@ -334,7 +334,7 @@
                     margin-top: 5px;
                     padding-left: 0;
 
-                    font-size: @font-size-small + 1px;
+                    font-size: @font-size-small + @font-size-alt-expand;
                     font-family: @font-alt;
                 }
 
