--- a/assets/styles/frontend/common/components/list/set.less
+++ b/assets/styles/frontend/common/components/list/set.less
@@ -197,7 +197,7 @@
             }
 
             @media @query-xl {
-                font-size: @font-size-extra-small + 1px
+                font-size: @font-size-extra-small + @font-size-alt-expand
             }
         }
 
