--- a/assets/styles/frontend/common/components/list/simple.less
+++ b/assets/styles/frontend/common/components/list/simple.less
@@ -8,7 +8,7 @@
         line-height: 24px;
         margin-left: @list-simple-gap;
 
-        font-size: @font-size-small + 1px;
+        font-size: @font-size-small + @font-size-alt-expand;
         font-family: @font-alt;
 
         &:before {
