--- a/assets/styles/frontend/common/components/list/stores.less
+++ b/assets/styles/frontend/common/components/list/stores.less
@@ -78,7 +78,7 @@
                     white-space: nowrap;
 
                     font-family: @font-alt;
-                    font-size: @font-size-small + 1px;
+                    font-size: @font-size-small + @font-size-alt-expand;
                     font-weight: 400;
                     text-transform: none;
                 }
@@ -88,7 +88,7 @@
                 width: 100%;
                 text-align: center;
 
-                font-size: @font-size-small + 1px;
+                font-size: @font-size-small + @font-size-alt-expand;
                 font-family: @font-alt;
 
                 @media @query-md {
