--- a/assets/styles/frontend/common/components/table/cart.less
+++ b/assets/styles/frontend/common/components/table/cart.less
@@ -282,7 +282,7 @@
                 margin-top: 5px;
                 line-height: 13px;
 
-                font-size: 11px + 1px;
+                font-size: 11px + @font-size-alt-expand;
                 font-family: @font-alt;
             }
         }
