--- a/assets/styles/frontend/common/layout/header.less
+++ b/assets/styles/frontend/common/layout/header.less
@@ -183,7 +183,7 @@
     justify-content: center;
     align-items: center;
 
-    font-size: @font-size-extra-small + 1px;
+    font-size: @font-size-extra-small + @font-size-alt-expand;
     font-family: @font-alt;
 
     @media @query-lg {
