--- a/assets/styles/frontend/common/layout/header/top-bar.less
+++ b/assets/styles/frontend/common/layout/header/top-bar.less
@@ -62,7 +62,7 @@
                 }
 
                 &__link {
-                    font-size: @font-size-extra-small + 1px;
+                    font-size: @font-size-extra-small + @font-size-alt-expand;
                     font-family: @font-alt;
                     color: @color-base;
                     text-decoration: none;
@@ -74,7 +74,7 @@
                 }
 
                 &__text {
-                    font-size: 11px + 1px;
+                    font-size: 11px + @font-size-alt-expand;
                     font-family: @font-alt;
                     text-transform: uppercase;
                     text-decoration: none;
