--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -63,6 +63,18 @@
                     <div class="box-detail-add__buttons__item-variant box-detail-add__buttons__item-variant--payments btn btn--big js-cofidis-calculator" {% if disabled %}disabled="disabled"{% endif %} data-product-price="{{ sellingPrice.priceWithVat.amount }}" data-hard-disabled="{{ hardDisabled }}">{{ 'Spočítat splátky'|trans }}</div>
                 {% endif %}
             {% else %}
+                <div class="in-add-to-cart__spinbox{% if product.realStockQuantity < 1 or product.calculatedSellingDenied or not showAmountInput %} display-none{% endif %}">
+                    <span class="form-input-spinbox js-spinbox">
+                        {{ form_widget(form.quantity, { attr: {
+                            class: 'form-input-spinbox__input input-no-style js-spinbox-input',
+                            'data-spinbox-min': product.realMinimumAmount,
+                            'data-spinbox-step': product.amountMultiplier,
+                            'data-spinbox-max': product.realStockQuantity
+                        } }) }}
+                        <button type="button" class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></button>
+                        <button type="button" class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></button>
+                    </span>
+                </div>
                 {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__buttons__item btn btn--success btn--large', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
                 {% if showCofidisBanner %}
                     <div class="box-detail-add__buttons__item btn btn--large js-cofidis-calculator" {% if disabled %}disabled="disabled"{% endif %} data-product-price="{{ sellingPrice.priceWithVat.amount }}" data-hard-disabled="{{ hardDisabled }}">{{ 'Spočítat splátky'|trans }}</div>
