--- a/assets/styles/frontend/common/components/in/product-prices.less
+++ b/assets/styles/frontend/common/components/in/product-prices.less
@@ -12,8 +12,8 @@
         margin-bottom: 30px;
     }
 
-    &--without-gap {
-        margin-bottom: 0;
+    &--small-gap {
+        margin-bottom: 20px;
     }
 
     &__item {
