--- a/assets/styles/frontend/common/main-category.less
+++ b/assets/styles/frontend/common/main-category.less
@@ -23,6 +23,7 @@
 
 //// box
 @import "components/box/category-tip.less";
+@import "components/box/detail-add.less";
 @import "components/box/list.less";
 @import "components/box/filter.less";
 @import "components/box/price-slider.less";
