--- a/templates/Front/Content/Category/categoryTip.html.twig
+++ b/templates/Front/Content/Category/categoryTip.html.twig
@@ -26,8 +26,8 @@
                     <div class="box-category-tip__content__info">
                         {{ boxDetail.productPrice(tipProduct, 'tipProduct') }}
                         {% if not tipProduct.isMainVariant %}
-                            <div class="js-product-detail-main-add-to-cart-wrapper">
-                                {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: tipProduct, showAmountInput: false})) }}
+                            <div class="box-detail-add box-detail-add--category-tip js-product-detail-main-add-to-cart-wrapper">
+                                {{ render(controller('App\\Controller\\Front\\CartController:addProductFormAction', {product: tipProduct, type: 'tipProduct', showAmountInput: false})) }}
                             </div>
                         {% endif %}
                     </div>
