--- a/assets/styles/frontend/common/components/box/category-tip.less
+++ b/assets/styles/frontend/common/components/box/category-tip.less
@@ -86,6 +86,7 @@
 
             &__in {
                 display: flex;
+                height: 100%;
                 flex-direction: column;
                 align-items: center;
                 padding: @box-category-tip-inner-padding - @box-category-tip-border-width;
@@ -142,7 +143,8 @@
 
         &__info {
             display: flex;
-            align-items: center;
+            flex-direction: column;
+            justify-content: center;
             width: 100%;
 
             @media @query-lg {
