Added availability to category tip.

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -20,3 +20,7 @@
 .videos-box-no-margin {
     margin-top: -48px;
 }
+
+.box-category-tip__content__info__availability {
+    margin: -15px 0 9px 0;
+}
