--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -36,6 +36,8 @@
         <link rel="manifest" href="{{ asset('public/frontend/images/favicons/site.webmanifest') }}">
         <link rel="mask-icon" href="{{ asset('public/frontend/images/favicons/safari-pinned-tab.svg') }}" color="#0077b3">
         <link rel="shortcut icon" href="{{ asset('public/frontend/images/favicons/favicon.ico') }}">
+        <link rel="stylesheet" href="https://cdn.luigisbox.com/autocomplete.css"/>
+        <link rel="dns-prefetch" href="//live.luigisbox.com">
         <meta name="msapplication-TileColor" content="#0077b3">
         <meta name="msapplication-TileImage" content="{{ asset('public/frontend/images/favicons/mstile-144x144.png') }}">
         <meta name="msapplication-square70x70logo" content="{{ asset('public/frontend/images/favicons/mstile-70x70.png') }}">
