Replaced our search results by those from Luigi's Box.

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -24,3 +24,11 @@
 .box-category-tip__content__info__availability {
     margin: -15px 0 9px 0;
 }
+
+.lb-aside-section:first-child .box-filter__choice {
+    border: none;
+}
+
+.box-search--loading {
+    opacity: 0;
+}
