--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -21,91 +21,12 @@
 {% endblock %}
 
 {% block main_content %}
-    <div class="box-search">
-        <div class="web__line">
-            <div class="web__container">
-                <h1 class="box-search__title">
-                    {{ 'Vyhledávání výrazu'|trans }} <strong>„{{ searchText }}“</strong>
-                    {{ paginator.titleAddon(paginationResultProducts) }}
-                </h1>
-            </div>
-        </div>
+    {% include 'Front/Content/Product/luigisBoxSearchResultsTemplates.html.twig' with {isRegisteredCustomer: isRegisteredCustomer} %}
 
-        {% if
-            foundCategories|length > 0
-            or paginationResultProducts.results|length > 0
-            or paginationResultSets.results|length > 0
-        %}
-            <div class="web__line">
-                <div class="web__container">
-                    <div class="box-search__navigation">
-                        {% if foundCategories|length > 0 %}
-                            <a href="#categories" data-space-above-position="0" class="box-search__navigation__item js-scroll-to-position" data-tab-id="categories">
-                                {{ 'Kategorie'|trans }} ({{ foundCategories|length }})
-                            </a>
-                        {% endif %}
-                        {% if paginationResultProducts.results|length > 0 %}
-                            <a href="#products" data-space-above-position="0" class="box-search__navigation__item js-scroll-to-position" data-tab-id="products">
-                                {{ 'Produkty'|trans }} ({{ paginationResultProducts.totalCount }})
-                            </a>
-                        {% endif %}
-                        {% if paginationResultSets.results|length > 0 %}
-                            <a href="#sets" data-space-above-position="0" class="box-search__navigation__item js-scroll-to-position" data-tab-id="sets">
-                                {{ 'Sety'|trans }} ({{ paginationResultSets.totalCount }})
-                            </a>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-
-        {% if foundCategories|length > 0 %}
-            <div class="web__line" id="categories">
-                <div class="web__container">
-                    <h3 class="box-search__subtitle">{{ 'Nalezené kategorie'|trans }}</h3>
-                    {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': foundCategories, 'title': 'Nalezené kategorie'|trans, 'showText': false } %}
-                </div>
-            </div>
-        {% endif %}
-
-        <div class="web__line">
-            <div class="web__container">
-                <h3 class="box-search__subtitle" id="products">{{ 'Nalezené produkty'|trans }}</h3>
-                <div class="box-list box-list--search">
-                    <div class="box-list__wrap js-product-list-with-filter js-tabs-content">
-                        {% if paginationResultProducts.results|length > 0 or filterFormSubmitted %}
-                            <div class="box-list__panel js-product-list-panel">
-                                <div class="box-filter js-product-filter">
-                                    {{ productFilterForm.filterForm(
-                                        filterForm,
-                                        url('front_product_search'),
-                                        url('front_product_search', { (SEARCH_TEXT_PARAMETER) : searchText }),
-                                        searchText,
-                                        'search',
-                                        productFilterCountData,
-                                        priceRange,
-                                        filterFormSubmitted,
-                                        allowBrandLinks
-                                    ) }}
-                                </div>
-                            </div>
-                        {% endif %}
-
-                        <div class="box-list__content{% if paginationResultProducts.results|length < 0 or not filterFormSubmitted %} box-list__content--full-width{% endif %} js-product-list-ajax-filter-products-with-controls">
-                            <div class="box-list__products">
-                                {{ render(controller('App\\Controller\\Front\\ProductController:selectOrderingModeForSearchAction')) }}
-                                {% include 'Front/Content/Product/productsWithControls.html.twig' with {paginationResult: paginationResultProducts, filterFormSubmitted: filterFormSubmitted, searchText: searchText, paging: false} %}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="box-list__wrap box-list__wrap--wrapped js-tabs-content" id="sets">
-                        {{ render(controller('App\\Controller\\Front\\ProductController:renderSetsBySearchTextAction', {paginationResultSets: paginationResultSets, searchText: searchText})) }}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="search-ui-data" class="display-none" data-tracker-id="{{ luigisTrackerId }}" data-locale="{{ isSlovakDomain() ? 'sk' : 'cz' }}"
+         data-currency-symbol="{{ ' ' ~ currencySymbolByDomainId(getDomain().id) }}"></div>
+    <div id="search-ui"></div>
+    <script src="https://cdn.luigisbox.com/search.js"></script>
 
     <div class="web__line">
         <div class="web__container">
