--- a/templates/Front/Content/Advert/banners.html.twig
+++ b/templates/Front/Content/Advert/banners.html.twig
@@ -2,6 +2,32 @@
     <div class="web__container web__container--no-padding">
         <div class="list-grid-images">
             <ul class="list-grid-images__portrait">
+                {% if isSlovakDomain() %}
+                    <li class="list-grid-images__portrait__item">
+                        <a href="https://www.tropicfishing.sk/mivardi/?utm_source=web&utm_medium=banner&utm_campaign=mivardi" class="list-grid-images__portrait__link">
+                            <picture>
+                                <img alt="Mivardi" title="Mivardi" src="{{ asset('public/frontend/images/mivardi_sk.png') }}" loading="lazy" data-src="{{ asset('public/frontend/images/mivardi_sk.png') }}" class="image-noticer-rectangle loaded" itemprop="image">
+                            </picture>
+
+                            <picture>
+                                <img alt="Mivardi" title="Mivardi" src="{{ asset('public/frontend/images/mivardi_mobil_sk.png') }}" loading="lazy" data-src="{{ asset('public/frontend/images/mivardi_mobil_sk.png') }}" class="image-noticer-mobile loaded" itemprop="image">
+                            </picture>
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="list-grid-images__portrait__item">
+                        <a href="https://www.tropicfishing.cz/mivardi/?utm_source=web&utm_medium=banner&utm_campaign=mivardi" class="list-grid-images__portrait__link">
+                            <picture>
+                                <img alt="Mivardi" title="Mivardi" src="{{ asset('public/frontend/images/mivardi_cz.png') }}" loading="lazy" data-src="{{ asset('public/frontend/images/mivardi_cz.png') }}" class="image-noticer-rectangle" itemprop="image">
+                            </picture>
+
+                            <picture>
+                                <img alt="Mivardi" title="Mivardi" src="{{ asset('public/frontend/images/mivardi_mobil_cz.png') }}" loading="lazy" data-src="{{ asset('public/frontend/images/mivardi_mobil_cz.png') }}" class="image-noticer-mobile" itemprop="image">
+                            </picture>
+                        </a>
+                    </li>
+                {% endif %}
+
                 {% if fourthRectangle is not null %}
                     <li class="list-grid-images__portrait__item">
                         <a href="{{ fourthRectangle.link }}" class="list-grid-images__portrait__link">
@@ -12,13 +38,30 @@
                 {% endif %}
             </ul>
             <ul class="list-grid-images__landscape">
-                {% if firstSquare is not null %}
+                {% if isSlovakDomain() %}
                     <li class="list-grid-images__landscape__item">
-                        <a href="{{ firstSquare.link }}" class="list-grid-images__landscape__link">
-                            {{ image(firstSquare, {size: 'square', alt: firstSquare.name}) }}
+                        <a href="https://www.tropicfishing.sk/batohy-tasky-puzdra-a-voziky/?utm_source=web&utm_medium=banner&utm_campaign=puzdra13" class="list-grid-images__landscape__link">
+                            <picture>
+                                <img alt="Puzdra13" title="Puzdra13" src="{{ asset('public/frontend/images/ff_mobil_sk.png') }}" loading="lazy" data-src="{{ asset('public/frontend/images/ff_mobil_sk.png') }}" class="image-noticer-square" itemprop="image">
+                            </picture>
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="list-grid-images__landscape__item">
+                        <a href="https://www.tropicfishing.cz/batohy-tasky-pouzdra-a-voziky/?utm_source=web&utm_medium=banner&utm_campaign=pouzdra13" class="list-grid-images__landscape__link">
+                            <picture>
+                                <img alt="Pouzdra13" title="Pouzdra13" src="{{ asset('public/frontend/images/ff_mobil_cz.png') }}" loading="lazy" data-src="{{ asset('public/frontend/images/ff_mobil_cz.png') }}" class="image-noticer-square" itemprop="image">
+                            </picture>
                         </a>
                     </li>
                 {% endif %}
+{#                {% if firstSquare is not null %}#}
+{#                    <li class="list-grid-images__landscape__item">#}
+{#                        <a href="{{ firstSquare.link }}" class="list-grid-images__landscape__link">#}
+{#                            {{ image(firstSquare, {size: 'square', alt: firstSquare.name}) }}#}
+{#                        </a>#}
+{#                    </li>#}
+{#                {% endif %}#}
                 {% if secondSquare is not null %}
                     <li class="list-grid-images__landscape__item">
                         <a href="{{ secondSquare.link }}" class="list-grid-images__landscape__link">
